fix: adjust event list wrap

--- a/app/static/global.css
+++ b/app/static/global.css
@@ -42,7 +42,7 @@
   --gray-600: #6e7683;
   --blue-600: #1e61cd;
   --magenta-100: #f9d7eb;
-
+  --bg-dark: #09090b;
   --max-width-0: 320px;
   --max-width-1: 768px;
 }
@@ -53,6 +53,12 @@ html {
   -moz-text-size-adjust: 100%;
   text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    background-color: var(--bg-dark);
+  }
 }
 
 body {
